<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/star_48"
        android:title="@string/action_favorite"
        app:showAsAction="always" />

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_favorite_added"
        android:icon="@drawable/star_filled_48"
        android:title="@string/action_favorite_added"
        app:showAsAction="always" />

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_facebook"
        android:icon="@drawable/facebook"
        android:title="@string/action_facebook"
        app:showAsAction="always" />

</menu>